--- a/Changes
+++ b/Changes
@@ -1,2 +1,5 @@
+0.002   2016-04-29
+        * Ugh. Fix indexing by adding PodWeaver to the dist.ini.
+
 0.001   2016-04-24
         * First version.
