--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.003   2016-04-29
+        * Add warning.
+
 0.002   2016-04-29
         * Ugh. Fix indexing by adding PodWeaver to the dist.ini.
 
