--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 {{NEXT}}
 
-        * Actually rewrite a file with rewrite_file.
-          (Nicolas R. @atoomic, Sawyer X)
+        * Handle evals. (Nicolas R. @atoomic)
+        * Actually rewrite a file with rewrite_file. (Nicolas R. @atoomic)
         * Support additional cases. (Nicolas R. @atoomic)
         * Add TravisCI configuration. (Nicolas R. @atoomic)
 
